# cmi_dss

./: LICENSE  README.md  cmi-catboost.ipynb  pyproject.toml  requirements.txt
src/cmi_sleep/cnn1d/: README.md  data.py  model.py  train.py
src/cmi_sleep/utils/: evaluation.py  event_detection_ap.py  feature_extraction.py  preprocessing.py
src/wavenet/: cmi_wavenet_hub.ipynb
